--- a/compendium/armour.html
+++ b/compendium/armour.html
@@ -72,7 +72,7 @@
       <td><span class="quiet-text">None</span></td>
     </tr>
     <tr>
-      <td><span id="moon-armour" class="record-name">Moon Armour</span><br /><span class="small-text"><a href="#legend">Evade encounters</a></span><br /><img src="/assets/img/armour/moon armour.gif" alt="Moon Armour" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span></td>
+      <td><span id="moon-armour" class="record-name">Moon Armour</span><br /><span class="small-text"><a href="#evade-encounters">Evade encounters</a></span><br /><img src="/assets/img/armour/moon armour.gif" alt="Moon Armour" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span></td>
       <td>15</td>
       <td><div class="bar"><span class="bar-fill" style="width:25%;"></span></div><span class="small-text ">10</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:10%;"></span></div><span class="small-text elemental">10% Elemental</span></td>
@@ -210,13 +210,13 @@
       <td><span class="quiet-text">None</span></td>
     </tr>
     <tr>
-      <td><span id="hopalong-boots" class="record-name">Hopalong Boots</span><br /><span class="small-text"><a href="#legend">Strike first</a></span><br /><img src="/assets/img/armour/hopalong boots.gif" alt="Hopalong Boots" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1225</span></td>
+      <td><span id="hopalong-boots" class="record-name">Hopalong Boots</span><br /><span class="small-text"><a href="#strike-first">Strike first</a></span><br /><img src="/assets/img/armour/hopalong boots.gif" alt="Hopalong Boots" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1225</span></td>
       <td>1</td>
       <td><div class="bar"><span class="bar-fill" style="width:30%;"></span></div><span class="small-text ">12</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:25%;"></span></div><span class="small-text water">25% Water</span></td>
     </tr>
     <tr>
-      <td><span id="ugly-disguise" class="record-name">Ugly Disguise</span><br /><span class="small-text"><a href="#legend">Evade encounters</a></span><br /><img src="/assets/img/armour/ugly disguise.gif" alt="Ugly Disguise" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1225</span></td>
+      <td><span id="ugly-disguise" class="record-name">Ugly Disguise</span><br /><span class="small-text"><a href="#evade-encounters">Evade encounters</a></span><br /><img src="/assets/img/armour/ugly disguise.gif" alt="Ugly Disguise" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1225</span></td>
       <td>12</td>
       <td><div class="bar"><span class="bar-fill" style="width:62%;"></span></div><span class="small-text ">25</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="small-text fire">-100% Fire</span></td>
@@ -288,7 +288,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:15%;"></span></div><span class="small-text elemental">15% Elemental</span></td>
     </tr>
     <tr>
-      <td><span id="sentinel-plate" class="record-name">Sentinel Plate</span><br /><img src="/assets/img/armour/sentinel plate.gif" alt="Sentinel Plate" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">5000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#royal-sentinel">Royal Sentinel</a></li><li><a href="enemies#general-octavius">General Octavius</a></li><li><a href="enemies#thessalonian-ekdromos">Thessalonian Ekdromos</a></li><li><a href="enemies#thessalonian-hoplite">Thessalonian Hoplite</a></li><li><a href="enemies#lina3">Fur Apparition</a></li></ul></details></td>
+      <td><span id="sentinel-plate" class="record-name">Sentinel Plate</span><br /><img src="/assets/img/armour/sentinel plate.gif" alt="Sentinel Plate" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">5000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#general-octavius">General Octavius</a></li><li><a href="enemies#royal-sentinel">Royal Sentinel</a></li><li><a href="enemies#thessalonian-hoplite">Thessalonian Hoplite</a></li><li><a href="enemies#thessalonian-ekdromos">Thessalonian Ekdromos</a></li><li><a href="enemies#lina3">Fur Apparition</a></li></ul></details></td>
       <td>90</td>
       <td><div class="bar"><span class="bar-fill" style="width:82%;"></span></div><span class="small-text ">33</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:10%;"></span></div><span class="small-text physical">10% Physical</span></td>
@@ -348,13 +348,13 @@
       <td><div class="bar"><span class="bar-fill" style="width:35%;"></span></div><span class="small-text water">35% Water</span></td>
     </tr>
     <tr>
-      <td><span id="guardian-plate" class="record-name">Guardian Plate</span><br /><img src="/assets/img/armour/guardian plate.gif" alt="Guardian Plate" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">8000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#phalanx-captain">Phalanx Captain</a></li><li><a href="enemies#cychreides">Cychreides</a></li><li><a href="enemies#skolopendra">Skolopendra</a></li><li><a href="enemies#lina3">Fur Apparition</a></li></ul></details></td>
+      <td><span id="guardian-plate" class="record-name">Guardian Plate</span><br /><img src="/assets/img/armour/guardian plate.gif" alt="Guardian Plate" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">8000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#phalanx-captain">Phalanx Captain</a></li><li><a href="enemies#skolopendra">Skolopendra</a></li><li><a href="enemies#cychreides">Cychreides</a></li><li><a href="enemies#lina3">Fur Apparition</a></li></ul></details></td>
       <td>90</td>
       <td><div class="bar"><span class="bar-fill" style="width:95%;"></span></div><span class="small-text ">38</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:20%;"></span></div><span class="small-text physical">20% Physical</span></td>
     </tr>
     <tr>
-      <td><span id="prismatic-mantle" class="record-name">Prismatic Mantle</span><br /><img src="/assets/img/armour/prismatic mantle.gif" alt="Prismatic Mantle" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">8000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li><li><a href="enemies#lina3">Fur Apparition</a></li><li><a href="enemies#oukkar">Oukkar</a></li></ul></details></td>
+      <td><span id="prismatic-mantle" class="record-name">Prismatic Mantle</span><br /><img src="/assets/img/armour/prismatic mantle.gif" alt="Prismatic Mantle" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">8000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#lina3">Fur Apparition</a></li><li><a href="enemies#oukkar">Oukkar</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>55</td>
       <td><div class="bar"><span class="bar-fill" style="width:62%;"></span></div><span class="small-text ">25</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:30%;"></span></div><span class="small-text elemental">30% Elemental</span></td>
@@ -414,14 +414,14 @@
 
 <h2 id="notes">Notes</h2>
 
-<p><strong>Evade encounters</strong> prevents random encounters while travelling.</p>
+<p><span id="evade-encounters"><strong>Evade encounters</strong></span> prevents random encounters while travelling.</p>
 
 <ul>
   <li><a href="#moon-armour">Moon Armour</a></li>
   <li><a href="#ugly-disguise">Ugly Disguise</a></li>
 </ul>
 
-<p><strong>Strike first</strong> causes you to always take your turn first in battle.</p>
+<p><span id="strike-first"><strong>Strike first</strong></span> causes you to always take your turn first in battle.</p>
 
 <ul>
   <li><a href="#hopalong-boots">Hopalong Boots</a></li>
