--- a/compendium/guide.html
+++ b/compendium/guide.html
@@ -387,11 +387,11 @@
   <tbody>
     <tr>
       <td>Accuracy</td>
-      <td>Determines chance to hit.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary>Accuracy = <code class="language-plaintext highlighter-rouge">weapon's accuracy</code> + <code class="language-plaintext highlighter-rouge">dexterity</code> - 10</details></td>
+      <td>Determines chance to hit.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary><p>Accuracy = <code class="language-plaintext highlighter-rouge">weapon's accuracy</code> + <code class="language-plaintext highlighter-rouge">dexterity</code> - 10</p></details></td>
     </tr>
     <tr>
       <td>Base Damage</td>
-      <td>Determines how much damage will be done with a <a href="#attacking">regular attack</a>.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary>Base damage = <a href="#power"><code class="language-plaintext highlighter-rouge">power</code></a> × <a href="#primary-stats"><code class="language-plaintext highlighter-rouge">primary stat</code></a> / 10</details></td>
+      <td>Determines how much damage will be done with a <a href="#attacking">regular attack</a>.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary><p>Base damage = <a href="#power"><code class="language-plaintext highlighter-rouge">power</code></a> × <a href="#primary-stats"><code class="language-plaintext highlighter-rouge">primary stat</code></a> / 10</p></details></td>
     </tr>
     <tr>
       <td>Average Damage</td>
@@ -399,23 +399,23 @@
     </tr>
     <tr>
       <td>Critical Chance</td>
-      <td>Determines chance to land a critical hit.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary>Critical chance = <code class="language-plaintext highlighter-rouge">weapon's critical chance</code> × (1 + (<code class="language-plaintext highlighter-rouge">dexterity</code> - 10) / 100)</details></td>
+      <td>Determines chance to land a critical hit.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary><p>Critical chance = <code class="language-plaintext highlighter-rouge">weapon's critical chance</code> × (1 + (<code class="language-plaintext highlighter-rouge">dexterity</code> - 10) / 100)</p></details></td>
     </tr>
     <tr>
       <td>Critical Damage</td>
-      <td>Determines critical hit damage compared to a regular attack.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary>Critical damage = <code class="language-plaintext highlighter-rouge">weapon's critical damage</code> × (1 + (<code class="language-plaintext highlighter-rouge">strength</code> - 10) / 100)</details></td>
+      <td>Determines critical hit damage compared to a regular attack.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary><p>Critical damage = <code class="language-plaintext highlighter-rouge">weapon's critical damage</code> × (1 + (<code class="language-plaintext highlighter-rouge">strength</code> - 10) / 100)</p></details></td>
     </tr>
     <tr>
       <td>Defence</td>
-      <td>Decreases damage taken by a <em>flat value</em>. Calculated before reductions.<details><summary class="small-text"><em>Flat value?</em></summary>Every point of defence will reduce damage taken by one point.</details></td>
+      <td>Decreases damage taken by a <em>flat value</em>. Calculated before reductions.<details><summary class="small-text"><em>Flat value?</em></summary><p>Every point of defence will reduce damage taken by one point.</p></details></td>
     </tr>
     <tr>
       <td>Reduction</td>
-      <td>Decreases damage taken by a <em>percentage</em>. Calculated after defence.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary>Reduction = <code class="language-plaintext highlighter-rouge">equipment's reduction</code> + 3 × √(<code class="language-plaintext highlighter-rouge">wisdom</code> - 10)</details></td>
+      <td>Decreases damage taken by a <em>percentage</em>. Calculated after defence.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary><p>Reduction = <code class="language-plaintext highlighter-rouge">equipment's reduction</code> + 3 × √(<code class="language-plaintext highlighter-rouge">wisdom</code> - 10)</p></details></td>
     </tr>
     <tr>
       <td>Block Chance</td>
-      <td>Determines chance to nullify an enemy attack against you.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary>Block chance = <code class="language-plaintext highlighter-rouge">shield's block chance</code> × (1 + (<code class="language-plaintext highlighter-rouge">dexterity</code> - 10) / 20)</details></td>
+      <td>Determines chance to nullify an enemy attack against you.<details markdown=1><summary class="small-text"><em>What's the formula?</em></summary><p>Block chance = <code class="language-plaintext highlighter-rouge">shield's block chance</code> × (1 + (<code class="language-plaintext highlighter-rouge">dexterity</code> - 10) / 20)</p></details></td>
     </tr>
   </tbody>
 </table>
