Pull latest with modifications

--- a/compendium/shields.html
+++ b/compendium/shields.html
@@ -38,7 +38,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/compendium/world-map">Map</a><a class="page-link" href="/compendium/guide">Guide</a><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a></div>
+        <div class="trigger"><a class="page-link" href="/compendium/guide">Guide</a><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a></div>
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
@@ -229,7 +229,7 @@
       <td><span class="quiet-text">None</span></td>
     </tr>
     <tr>
-      <td><span id="force-gauntlets" class="record-name">Force Gauntlets</span><br /><img src="/assets/img/shields/force gauntlets.gif" alt="Force Gauntlets" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">3000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#black-knight">Black Knight</a></li><li><a href="enemies#royal-pyromancer">Royal Pyromancer</a></li><li><a href="enemies#royal-cryomancer">Royal Cryomancer</a></li></ul></details></td>
+      <td><span id="force-gauntlets" class="record-name">Force Gauntlets</span><br /><img src="/assets/img/shields/force gauntlets.gif" alt="Force Gauntlets" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">3000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#black-knight">Black Knight</a></li><li><a href="enemies#royal-cryomancer">Royal Cryomancer</a></li><li><a href="enemies#royal-pyromancer">Royal Pyromancer</a></li></ul></details></td>
       <td>10</td>
       <td><div class="bar"><span class="bar-fill" style="width:37%;"></span></div><span class="small-text ">15</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="small-text ">0%</span></td>
@@ -264,14 +264,14 @@
       <td><div class="bar"><span class="bar-fill" style="width:25%;"></span></div><span class="small-text water">25% Water</span></td>
     </tr>
     <tr>
-      <td><span id="flame-guard" class="record-name">Flame Guard</span><br /><img src="/assets/img/shields/flame guard.gif" alt="Flame Guard" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">3500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#royal-pyromancer">Royal Pyromancer</a></li><li><a href="enemies#lava-spirit">Lava Spirit</a></li><li><a href="enemies#magus's-henchman">Magus’s Henchman</a></li><li><a href="enemies#magma-planet">Magma Planet</a></li></ul></details></td>
+      <td><span id="flame-guard" class="record-name">Flame Guard</span><br /><img src="/assets/img/shields/flame guard.gif" alt="Flame Guard" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">3500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#royal-pyromancer">Royal Pyromancer</a></li><li><a href="enemies#lava-spirit">Lava Spirit</a></li><li><a href="enemies#magma-planet">Magma Planet</a></li><li><a href="enemies#magus's-henchman">Magus’s Henchman</a></li></ul></details></td>
       <td>55</td>
       <td><div class="bar"><span class="bar-fill" style="width:65%;"></span></div><span class="small-text ">26</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:45%;"></span></div><span class="small-text ">5%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:25%;"></span></div><span class="small-text fire">25% Fire</span></td>
     </tr>
     <tr>
-      <td><span id="radiant-barrier" class="record-name">Radiant Barrier</span><br /><img src="/assets/img/shields/radiant barrier.gif" alt="Radiant Barrier" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">4000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#romadan-guru">Romadan Guru</a></li><li><a href="enemies#fire-imp">Fire Imp</a></li><li><a href="enemies#lava-spirit">Lava Spirit</a></li><li><a href="enemies#tectonic-beast">Tectonic Beast</a></li><li><a href="enemies#masked-magus">Masked Magus</a></li><li><a href="enemies#choronzon">Balrog</a></li></ul></details></td>
+      <td><span id="radiant-barrier" class="record-name">Radiant Barrier</span><br /><img src="/assets/img/shields/radiant barrier.gif" alt="Radiant Barrier" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">4000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#romadan-guru">Romadan Guru</a></li><li><a href="enemies#fire-imp">Fire Imp</a></li><li><a href="enemies#tectonic-beast">Tectonic Beast</a></li><li><a href="enemies#lava-spirit">Lava Spirit</a></li><li><a href="enemies#masked-magus">Masked Magus</a></li><li><a href="enemies#choronzon">Balrog</a></li></ul></details></td>
       <td>0</td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="small-text ">0</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="small-text ">0%</span></td>
@@ -320,7 +320,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:10%;"></span></div><span class="small-text physical">10% Physical</span></td>
     </tr>
     <tr>
-      <td><span id="luminescent-barrier" class="record-name">Luminescent Barrier</span><br /><img src="/assets/img/shields/luminescent barrier.gif" alt="Luminescent Barrier" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">8000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li><li><a href="enemies#gargoyle">Aged Gargoyle</a></li><li><a href="enemies#lava-spirit">Lava Spirit</a></li><li><a href="enemies#magus-predecessor">Magus Predecessor</a></li></ul></details></td>
+      <td><span id="luminescent-barrier" class="record-name">Luminescent Barrier</span><br /><img src="/assets/img/shields/luminescent barrier.gif" alt="Luminescent Barrier" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">8000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#gargoyle">Aged Gargoyle</a></li><li><a href="enemies#lava-spirit">Lava Spirit</a></li><li><a href="enemies#magus-predecessor">Magus Predecessor</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>0</td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="small-text ">0</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="small-text ">0%</span></td>
