--- a/compendium/weapons.html
+++ b/compendium/weapons.html
@@ -38,7 +38,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/compendium/world-map">Map</a><a class="page-link" href="/compendium/guide">Guide</a><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a></div>
+        <div class="trigger"><a class="page-link" href="/compendium/guide">Guide</a><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a></div>
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
@@ -146,7 +146,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:40%;"></span></div><span class="small-text ">10%</span></td>
     </tr>
     <tr>
-      <td><span id="gyroscopic-flange" class="record-name">Gyroscopic Flange</span></span><br /><span class="small-text">Bludgeon</span><br /><img src="/assets/img/weapons/gyroscopic flange.gif" alt="Gyroscopic Flange" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#harpy">Harpy</a></li><li><a href="enemies#pterripus">Pterripus</a></li></ul></details></td>
+      <td><span id="gyroscopic-flange" class="record-name">Gyroscopic Flange</span></span><br /><span class="small-text">Bludgeon</span><br /><img src="/assets/img/weapons/gyroscopic flange.gif" alt="Gyroscopic Flange" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#harpy">Harpy</a></li><li><a href="enemies#pterripus">Pterripus</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">80%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:71%;"></span></div><span class="small-text ">75</span></td>
@@ -230,7 +230,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="small-text ">25%</span></td>
     </tr>
     <tr>
-      <td><span id="silver-sword" class="record-name">Silver Sword</span></span><br /><span class="small-text">Sword</span><br /><img src="/assets/img/weapons/silver sword.gif" alt="Silver Sword" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">5000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#albanian-gladiator">Albanian Gladiator</a></li><li><a href="enemies#greek-guard">Greek Guard</a></li><li><a href="enemies#shadow-hunter">Shadow Hunter</a></li><li><a href="enemies#royal-knight">Royal Knight</a></li><li><a href="enemies#general-octavius">General Octavius</a></li><li><a href="enemies#psilos">Psilos</a></li></ul></details></td>
+      <td><span id="silver-sword" class="record-name">Silver Sword</span></span><br /><span class="small-text">Sword</span><br /><img src="/assets/img/weapons/silver sword.gif" alt="Silver Sword" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">5000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#albanian-gladiator">Albanian Gladiator</a></li><li><a href="enemies#greek-guard">Greek Guard</a></li><li><a href="enemies#royal-knight">Royal Knight</a></li><li><a href="enemies#shadow-hunter">Shadow Hunter</a></li><li><a href="enemies#general-octavius">General Octavius</a></li><li><a href="enemies#psilos">Psilos</a></li></ul></details></td>
       <td>60</td>
       <td><div class="bar"><span class="bar-fill" style="width:90%;"></span></div><span class="small-text ">90%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:61%;"></span></div><span class="small-text ">65</span></td>
@@ -244,7 +244,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">20%</span></td>
     </tr>
     <tr>
-      <td><span id="golden-sun" class="record-name">Golden Sun</span></span><br /><span class="small-text">Sword</span><br /><img src="/assets/img/weapons/golden sun.gif" alt="Golden Sun" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#teumessian-fox">Teumessian Fox</a></li><li><a href="enemies#nemean-lion">Nemean Lion</a></li><li><a href="enemies#stymphalian-bird">Stymphalian Bird</a></li></ul></details></td>
+      <td><span id="golden-sun" class="record-name">Golden Sun</span></span><br /><span class="small-text">Sword</span><br /><img src="/assets/img/weapons/golden sun.gif" alt="Golden Sun" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#stymphalian-bird">Stymphalian Bird</a></li><li><a href="enemies#teumessian-fox">Teumessian Fox</a></li><li><a href="enemies#nemean-lion">Nemean Lion</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:90%;"></span></div><span class="small-text ">90%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:76%;"></span></div><span class="small-text ">80</span></td>
@@ -321,7 +321,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:32%;"></span></div><span class="small-text ">8%</span></td>
     </tr>
     <tr>
-      <td><span id="helm-splitter" class="record-name">Helm Splitter</span></span><br /><span class="small-text">Axe</span><br /><img src="/assets/img/weapons/helm splitter.gif" alt="Helm Splitter" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#hydra">Hydra</a></li></ul></details></td>
+      <td><span id="helm-splitter" class="record-name">Helm Splitter</span></span><br /><span class="small-text">Axe</span><br /><img src="/assets/img/weapons/helm splitter.gif" alt="Helm Splitter" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#hydra">Hydra</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:70%;"></span></div><span class="small-text ">70%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">85</span></td>
@@ -363,7 +363,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:32%;"></span></div><span class="small-text ">8%</span></td>
     </tr>
     <tr>
-      <td><span id="bardiche" class="record-name">Bardiche</span></span><br /><span class="small-text">Spear</span><br /><img src="/assets/img/weapons/bardiche.gif" alt="Bardiche" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">4700</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#royal-sentinel">Royal Sentinel</a></li><li><a href="enemies#flame-templar">Flame Templar</a></li><li><a href="enemies#psilos">Psilos</a></li></ul></details></td>
+      <td><span id="bardiche" class="record-name">Bardiche</span></span><br /><span class="small-text">Spear</span><br /><img src="/assets/img/weapons/bardiche.gif" alt="Bardiche" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">4700</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#flame-templar">Flame Templar</a></li><li><a href="enemies#royal-sentinel">Royal Sentinel</a></li><li><a href="enemies#psilos">Psilos</a></li></ul></details></td>
       <td>90</td>
       <td><div class="bar"><span class="bar-fill" style="width:60%;"></span></div><span class="small-text ">60%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:72%;"></span></div><span class="small-text ">76</span></td>
@@ -377,7 +377,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:32%;"></span></div><span class="small-text ">8%</span></td>
     </tr>
     <tr>
-      <td><span id="ornate-halberd" class="record-name">Ornate Halberd</span></span><br /><span class="small-text">Spear</span><br /><img src="/assets/img/weapons/ornate halberd.gif" alt="Ornate Halberd" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#minotaur">Minotaur</a></li></ul></details></td>
+      <td><span id="ornate-halberd" class="record-name">Ornate Halberd</span></span><br /><span class="small-text">Spear</span><br /><img src="/assets/img/weapons/ornate halberd.gif" alt="Ornate Halberd" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#minotaur">Minotaur</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:60%;"></span></div><span class="small-text ">60%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">85</span></td>
@@ -442,7 +442,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:30.4%;"></span></div><span class="small-text ">7.6%</span></td>
     </tr>
     <tr>
-      <td><span id="ash-bow" class="record-name">Ash Bow</span></span><br /><img src="/assets/img/weapons/ash bow.gif" alt="Ash Bow" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">4000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#shadow-sniper">Shadow Sniper</a></li><li><a href="enemies#psilos">Psilos</a></li><li><a href="enemies#gargoyle">Aged Gargoyle</a></li></ul></details></td>
+      <td><span id="ash-bow" class="record-name">Ash Bow</span></span><br /><img src="/assets/img/weapons/ash bow.gif" alt="Ash Bow" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">4000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#shadow-sniper">Shadow Sniper</a></li><li><a href="enemies#gargoyle">Aged Gargoyle</a></li><li><a href="enemies#psilos">Psilos</a></li></ul></details></td>
       <td>80</td>
       <td><div class="bar"><span class="bar-fill" style="width:50%;"></span></div><span class="small-text ">50%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:76%;"></span></div><span class="small-text ">80</span></td>
@@ -456,7 +456,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:32%;"></span></div><span class="small-text ">8%</span></td>
     </tr>
     <tr>
-      <td><span id="j-bow" class="record-name">J Bow</span></span><br /><img src="/assets/img/weapons/j bow.gif" alt="J Bow" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#centaur">Centaur</a></li><li><a href="enemies#gorgon">Gorgon</a></li></ul></details></td>
+      <td><span id="j-bow" class="record-name">J Bow</span></span><br /><img src="/assets/img/weapons/j bow.gif" alt="J Bow" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#centaur">Centaur</a></li><li><a href="enemies#gorgon">Gorgon</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:50%;"></span></div><span class="small-text ">50%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="small-text ">105</span></td>
@@ -542,7 +542,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:0.4%;"></span></div><span class="small-text ">0.1%</span></td>
     </tr>
     <tr>
-      <td><span id="khabir's-shaft" class="record-name">Khabir's Shaft</span></span><br /><img src="/assets/img/weapons/khabir's shaft.gif" alt="Khabir's Shaft" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#siren">Siren</a></li><li><a href="enemies#satyr">Satyr</a></li></ul></details></td>
+      <td><span id="khabir's-shaft" class="record-name">Khabir's Shaft</span></span><br /><img src="/assets/img/weapons/khabir's shaft.gif" alt="Khabir's Shaft" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#satyr">Satyr</a></li><li><a href="enemies#siren">Siren</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="small-text ">Always hits</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">85</span></td>
